리팩토링: Java 버전 다운그레이드 및 RespawnListener 제거
- pom.xml에서 Java 버전을 16에서 8로 변경
- OccupyPlugin에서 RespawnListener 클래스 및 해당 등록 삭제
- 여러 명령에서 탭 자동 완성을 위해 List.of() 대신 Collections.emptyList()를 사용하도록 SubCommand 인터페이스 업데이트
- 다양한 명령 클래스에서 불필요한 공백 제거